--- a/Nearsens.DataAccess/Nearsens.DataAccess.csproj
+++ b/Nearsens.DataAccess/Nearsens.DataAccess.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SqlOffersRepository.cs" />
     <Compile Include="SqlPlacesRepository.cs" />
     <Compile Include="SqlSubcategoriesRepository.cs" />
   </ItemGroup>
