Aggiunta WebApi per recuperare le offerte più vicine

--- a/Nearsens.Models/Nearsens.Models.csproj
+++ b/Nearsens.Models/Nearsens.Models.csproj
@@ -39,6 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GetNearestOffersQuery.cs" />
     <Compile Include="GetNearestPlacesQuery.cs" />
     <Compile Include="GetOffersByPlaceIdQuery.cs" />
     <Compile Include="GetOfferQuery.cs" />
