--- a/Nearsens.Web/Web.config
+++ b/Nearsens.Web/Web.config
@@ -20,7 +20,7 @@
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5.1" />
-    <httpRuntime targetFramework="4.5.1" maxQueryStringLength="65536" maxUrlLength="65536" />
+    <httpRuntime targetFramework="4.5.1" maxRequestLength="30720" maxQueryStringLength="65536" maxUrlLength="65536" />
   </system.web>
   <system.webServer>
     <modules>
