Aggiunta WebAPI per dettaglio place e offer; bugfixes

--- a/Nearsens.Web/Web.Release.config
+++ b/Nearsens.Web/Web.Release.config
@@ -13,7 +13,14 @@
         connectionString="Data Source=ReleaseSQLServer;Initial Catalog=MyReleaseDB;Integrated Security=True"
         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
     </connectionStrings>
-  -->
+  
+-->
+  <connectionStrings>
+    <add name="nearsensCS"
+      connectionString="workstation id=nearsens.mssql.somee.com;packet size=4096;user id=SimoneMorea_SQLLogin_1;pwd=4g38l8vxlj;data source=nearsens.mssql.somee.com;persist security info=False;initial catalog=nearsens"
+      xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
+  </connectionStrings> 
+  
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
     <!--
